refactor: Change pw toggle button tag to button and type to button

--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -33,10 +33,10 @@
                     <label for="password">비밀번호</label>
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input text-input">
-                        <div class="pw-toggle-btn">
+                        <button type="button" class="pw-toggle-btn">
                             <img src="img/eye-on.svg" alt="Show Password" class="hidden">
                             <img src="img/eye-off.svg" alt="Hide Password">
-                        </div>
+                        </button>
                     </div>
                 </div>
                 <button class="btn login-btn">로그인</button>
