--- a/signup/index.html
+++ b/signup/index.html
@@ -32,7 +32,7 @@
               <label class="sign-input-label">비밀번호</label>
               <input class="password-input" type="password" />
               <div class="error-message-password"></div>
-              <button class="eye-button" type="button">
+              <button class="password-eye-button" type="button">
                 <img src="../image/eye-off.jpg" />
               </button>
             </div>
@@ -40,7 +40,7 @@
               <label class="sign-input-label">비밀번호 확인</label>
               <input class="confirm-password-input" type="password" />
               <div class="error-message-password-confirm"></div>
-              <button class="eye-button" type="button">
+              <button class="confirm-password-eye-button" type="button">
                 <img src="../image/eye-off.jpg" />
               </button>
             </div>
