--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signIn</title>
-    <link rel="stylesheet" href="signin.css" />
+    <link rel="stylesheet" href="signin.style.css" />
     <link rel="stylesheet" href="global.css" />
     <link
       rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
@@ -25,13 +25,13 @@
           </div>
         </section>
         <form class="input">
-          <div class="input-section">
-            <div class="text">이메일<br /></div>
+          <div class="input__section">
+            <label class="text">이메일<br /></label>
             <input id="email" class="user-input" type="email" name="email" />
             <div id="email-errorText" class="errortext error"></div>
           </div>
-          <div class="input-section password__section">
-            <div class="text">비밀번호<br /></div>
+          <div class="input__section password__section">
+            <label class="text">비밀번호<br /></label>
             <input
               id="password"
               class="user-input"
@@ -41,7 +41,7 @@
             <i class="fa fa-eye fa-lg"></i>
             <div id="password-errorText" class="errortext error"></div>
           </div>
-          <button id="login-btn" class="signin">로그인</button>
+          <button id="btn" class="signin">로그인</button>
         </form>
 
         <div class="social">
@@ -57,6 +57,6 @@
         </div>
       </div>
     </main>
-    <script src="input.js"></script>
+    <script type="module" src="input.js"></script>
   </body>
 </html>
