이메일 유효성 검사 함수 수정

--- a/signin/index.html
+++ b/signin/index.html
@@ -33,7 +33,7 @@
               <label class="sign-input-label">비밀번호</label>
               <input class="password-input" type="password" />
               <div class="error-message-password"></div>
-              <button class="eye-button" type="button">
+              <button class="password-eye-button" type="button">
                 <img src="../image/eye-off.jpg" />
               </button>
             </div>
