--- a/signin.html
+++ b/signin.html
@@ -38,7 +38,7 @@
             <div class="auth-form__input-group">
               <label for="email">이메일</label>
               <input id="email" name="email" type="email">
-              <div id="auth-form__wrong-email"></div>
+              <div id="auth-form__email-error"></div>
             </div>
             <div class="auth-form__input-group">
               <label for="password">비밀번호</label>  
@@ -51,7 +51,7 @@
               </div>
             </div>
           </div>
-          <button class="auth-form__submit-btn" type="submit">로그인</button>
+          <button id="auth-form__signin-btn" type="submit">로그인</button>
         </form>
       </div>
       <div class="social-auth">
@@ -72,7 +72,7 @@
         </div>
       </div>
     </div>
-    <script src="/js/auth.js" type="module"></script>
+    <script src="/js/signin.js" type="module"></script>
   </main>
 </body>
 </html>
