--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
             <div class="auth-form__input-group">
               <label for="email">이메일</label>
               <input id="email" name="email" type="email">
-              <div class="auth-form__wrong-email"></div>
+              <div id="auth-form__email-error"></div>
             </div>
             <div class="auth-form__input-group">
               <label for="password">비밀번호</label>
@@ -47,7 +47,7 @@
                 <button class="auth-form__password-toggle-btn">
                   <img src="/icons/eye-off.svg" class="auth-form__password-icon" alt="비밀번호 보기">
                 </button>
-                <div class="auth-form__wrong-password"></div>
+                <div id="auth-form__password-error"></div>
               </div>
             </div>
             <div class="auth-form__input-group">
@@ -57,11 +57,11 @@
                 <button class="auth-form__password-toggle-btn confirm" type="button">
                   <img src="/icons/eye-off.svg" class="auth-form__password-icon confirm" alt="비밀번호 보기">
                 </button>
-                <div class="auth-form__wrong-password confirm"></div>
+                <div id="auth-form__password-confirm-error"></div>
               </div>
             </div>
           </div>
-          <button class="auth-form__submit-btn" type="submit">회원가입</button>
+          <button id="auth-form__signup-btn" type="submit">회원가입</button>
         </form>
       </div>
       <div class="social-auth">
@@ -82,6 +82,7 @@
         </div>
       </div>
     </div>
+    <script src="/js/signup.js" type="module"></script>
   </main>
 </body>
 </html>
