--- a/signup.html
+++ b/signup.html
@@ -10,40 +10,49 @@
   </head>
   <body>
     <header>
-      <a class="logo-link" href="index.html">
-        <img class="header-logo" src="./images/logo.svg" alt="홈으로 돌아가는 로고 이미지">
-      </a>
+      <h1>
+        <a class="logo-link" href="index.html">
+          <img class="header-logo" src="./images/logo.svg" alt="홈으로 돌아가는 로고 이미지">
+        </a>
+      </h1>
       <div class="signup-check-box">
         <span class="signup-check-text">이미 회원이신가요?</span>
         <a class="signiup-link" href="signin.html">로그인하기</a>
       </div>
     </header>
     <div class="signup-box">
-      <div class="signup-input-boxs">
-        <div class="signup-input-box">
-          <label for="signup-email">이메일</label>
-          <input id="signup-email" name="signup-email" type="email">
-        </div>
-        <div class="signup-input-box">
-          <label for="signup-password">비밀번호</label>
-          <div class="signup-input-password-box">
-            <input id="signup-password" name="signup-password" type="password">
-            <button class="password-button" type="button">
-              <img src="./images/eye-on.svg" alt="패스워드 눈 모양 이미지">
-            </button>
+      <form id="form">
+        <div class="signup-input-boxs">
+          <div class="signup-input-box">
+            <label for="signup-email">이메일</label>
+            <input id="signup-email" class="signin-email" name="signup-email" type="email">
+            <div class="email-err hide err-font">이메일을 입력해주세요.</div>
           </div>
-        </div>
-        <div class="signup-input-password">
-          <label for="signup-password-check">비밀번호 확인</label>
-          <div class="signup-input-password-box">
-            <input id="signup-password-check" name="signup-password-check" type="password">
-            <button class="password-button" type="button">
-              <img src="./images/eye-on.svg" alt="패스워드 눈 모양 이미지">
-            </button>
+          <div class="signup-input-box">
+            <label for="signup-password">비밀번호</label>
+            <div class="signup-input-password-box">
+              <input id="signup-password" class="signin-password" name="signup-password" type="password">
+              <button class="password-button" type="button">
+                <img class="eye-on hide" src="./images/eye-on.svg" alt="패스워드 눈 뜬 모양 이미지">
+                <img class="eye-off" src="./images/eye-off.svg" alt="패스워드 눈 감은 모양 이미지">
+              </button>
+            </div>
+            <div class="password-signup-err hide err-font">비밀번호는 영문,숫자 조합 8자 이상 입력해 주세요.</div>
           </div>
+          <div class="signup-input-password">
+            <label for="signup-password-check">비밀번호 확인</label>
+            <div class="signup-input-password-box">
+              <input id="signup-password-check" class="signin-password-check" name="signup-password-check" type="password">
+              <button class="password-button" type="button">
+                <img class="eye-on hide" src="./images/eye-on.svg" alt="패스워드 눈 뜬 모양 이미지">
+                <img class="eye-off" src="./images/eye-off.svg" alt="패스워드 눈 감은 모양 이미지">
+              </button>
+            </div>
+            <div class="password-signup-fail hide err-font">비밀번호가 일치하지 않아요.</div>
+          </div>
+          <button type='submit' class="cta">회원가입</button>
         </div>
-        <button class="cta">회원가입</button>
-      </div>
+      </form>
       <div class="other-signup">
         <span class="other-signup-text">다른 방식으로 가입하기</span>
         <div class="icon">
@@ -62,5 +71,6 @@
         </div>
       </div>
     </div>
+    <script type="module" src="./javascript/signup.js"></script>
   </body>
 </html>
