--- a/signin.html
+++ b/signin.html
@@ -28,12 +28,12 @@
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input id ="emailInput" class="sign-input" />
+            <input id ="email" class="sign-input" />
             <p id="email-error" class="error-message"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input id="pwInput" class="sign-input" type="password" />
+            <input id="password" class="sign-input" type="password" />
             <p id="pw-error" class="error-message"></p>
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
@@ -54,6 +54,6 @@
         </div>
       </div>
     </div>
-    <script src="./src/login.js"></script>
+    <script type="module" src="./src/login.js"></script>
   </body>
 </html>
