--- a/signup.html
+++ b/signup.html
@@ -24,22 +24,25 @@
       </p>
     </header>
     <div class="sign-box">
-      <form class="sign-form">
+      <form class="sign-form" id="sign-up-form">
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" />
+            <input id ="email" class="sign-input" />
+            <p id="email-error" class="error-message"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" type="password" />
+            <input id="password" class="sign-input" type="password" />
+            <p id="pw-error" class="error-message"></p>
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
-            <input class="sign-input" type="password" />
+            <input id="confirm-password" class="sign-input" type="password" />
+            <p id="confirm-pw-error" class="error-message"></p>
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
@@ -59,5 +62,6 @@
         </div>
       </div>
     </div>
+    <script type="module" src="./src/signup.js"></script>
   </body>
 </html>
