--- a/signup.html
+++ b/signup.html
@@ -22,31 +22,28 @@
     </header>
 
     <div class="sign-box">
-
-      <form class="sign-form">
+      <form class="sign-form" id="form">
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input input-border-default" type="email"/>
-            <div class="error-message" id="emailError"></div>
+            <input id="email" class="sign-input" />
+            <p id="email-error-message" class="error-message"></p>
           </div>
-
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input input-border-default" type="password"/>
-            <button class="eye-button" type="button">
+            <input id="password" class="sign-input" type="password" />
+            <p id="password-error-message" class="error-message"></p>
+            <button id="password-toggle" class="eye-button" type="button">
               <img src="./image/eye-off.svg" />
             </button>
-            <div class="password-message" id="passwordError"></div>
           </div>
-
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
-            <input class="sign-input input-border-default" type="password"/>
-            <button class="eye-button" type="button">
+            <input id="confirm-password" class="sign-input" type="password" />
+            <p id="confirm-password-error-message" class="error-message"></p>
+            <button id="confirm-password-toggle" class="eye-button" type="button">
               <img src="./image/eye-off.svg" />
             </button>
-            <div class="password-message" id="passwordError"></div>
           </div>
         </div>
         <button class="cta" type="submit">회원가입</button>
@@ -63,7 +60,8 @@
           </a>
         </div>
       </div>
-
     </div>
+    
+    <script type="module" src="./src/signup.js"></script>
   </body>
 </html>
