--- a/signup.html
+++ b/signup.html
@@ -19,32 +19,37 @@
       </div>
     </div>
 
-    <form>
+    <form id="form__inputForm">
       <div class="sign-wrap">
         <div class="sign-inner">
-          <label class="sign-label" for="email">이메일</label>
-          <input class="sign-input" type="email" name="email" /> 
+          <label class="sign-label" for="input-email">이메일</label>
+          <input id="input-email" class="sign-input" type="email" name="email" /> 
+          <div class="email-error-message"></div>
         </div>
+
         <div class="sign-inner">
-          <label class="sign-label" for="password">비밀번호</label>
+          <label class="sign-label" for="input-pw">비밀번호</label>
           <div class="sign-pw">
-            <input class="sign-input" type="password" name="password" />
+            <input id="input-pw" class="sign-input" type="password" name="password" />
             <button class="sign-pw__eye-btn" type="button"> 
-              <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
+              <img class="eye-change" src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기 버튼" />
             </button>
           </div>
+          <div class="pw-error-message"></div>
         </div>
+
         <div class="sign-inner">
-          <label class="sign-label" for="password">비밀번호 확인</label>
+          <label class="sign-label" for="input-pw-confirm">비밀번호 확인</label>
           <div class="sign-pw">
-            <input class="sign-input" type="password" name="password-check" />
+            <input id="input-pw-confirm" class="sign-input" type="password" name="passwordConfirm" />
             <button class="sign-pw__eye-btn" type="button">  
-              <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
+              <img class="eye-change" src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기 버튼" />
             </button>
           </div>
+          <div class="pw-confirm-error-message"></div>
         </div>
       </div>
-      <button class="sign-btn btn-color" type="button" type="submit">회원가입</button>
+      <button class="sign-btn btn-color" type="submit">회원가입</button>
     </form>
   </div>
 
@@ -63,5 +68,9 @@
       </a>
     </div>
   </div>
+
+  <script type="module" src="/assets/js/join.js"></script>
+  <!-- <script type="module" src="/assets/js/check.js"></script> -->
+  <script type="module" src="/assets/js/joinCheck.js"></script>
 </body>
 </html> 
