4주차 과제 완성

--- a/signin/signin.html
+++ b/signin/signin.html
@@ -20,7 +20,7 @@
     </header>
     <section class="form_section">
       <form action="">
-        <div class="form_section_div">
+        <div id="email-div" class="form_section_div">
           <label class="label" for="email">이메일</label>
           <input
             class="input"
@@ -43,6 +43,7 @@
             required
           />
           <img
+            id="eye-on"
             class="absolute"
             src="../img/eye_on.svg"
             alt="비밀번호 보호"
@@ -51,7 +52,7 @@
           />
           <p id="password-error"></p>
         </div>
-        <button class="button" type="button">로그인</button>
+        <button id="button" class="button" type="button">로그인</button>
       </form>
       <div class="div">
         <span class="div_span">소셜 로그인</span>
