--- a/nav.html
+++ b/nav.html
@@ -2,20 +2,20 @@
 <!DOCTYPE html>
 
 <html>
-<link href="css/reset.css" rel="stylesheet">
-<link href="css/global.css" rel="stylesheet">
+  <link href="css/reset.css" rel="stylesheet" />
+  <link href="css/global.css" rel="stylesheet" />
 
-<link href="css/nav.css" rel="stylesheet">
-<nav class="nav">
-	<div class="nav__contents">
-		<a class="nav__logo" href="/">
-			<img src="images/Linkbrary.svg">
-		</a>
-		<a class="nav__login-button" href='login.html'>
-			<p class="nav__login-label">로그인</p>
-		</a>
-	</div>
-</nav>
+  <link href="css/nav.css" rel="stylesheet" />
+  <nav class="nav">
+    <div class="nav__contents">
+      <a class="nav__logo" href="/">
+        <img src="images/Linkbrary.svg" />
+      </a>
+      <a class="nav__login-button" href="login.html">
+        <p class="nav__login-label">로그인</p>
+      </a>
+    </div>
+  </nav>
 
-
-<html>
+  <html></html>
+</html>
