feat: 이미지 파일명 의미 있는 파일명으로 지정

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <p>링크 추가하기</p>
       </a>
       <div class="landing-section__image--main">
-        <img src="images/image_25.png" />
+        <img src="images/img_landing_main.png" />
       </div>
     </main>
 
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="landing-section__image">
-          <img src="images/_img1_landing.svg" />
+          <img src="images/img1_landing.svg" />
         </div>
       </div>
     </section>
@@ -115,7 +115,7 @@
     <section class="landing-section">
       <div class="landing-section__contents arrange-4-mobile">
         <div class="landing-section__image">
-          <img src="images/_img2_landing.svg" />
+          <img src="images/img2_landing.svg" />
         </div>
         <div class="landing-section__text-area--medium">
           <div class="landing-section__text--large">
@@ -155,7 +155,7 @@
           </div>
         </div>
         <div class="landing-section__image">
-          <img src="images/_img3_landing.svg" />
+          <img src="images/img3_landing.svg" />
         </div>
       </div>
     </section>
@@ -164,7 +164,7 @@
     <section class="landing-section">
       <div class="landing-section__contents arrange-4-mobile">
         <div class="landing-section__image">
-          <img src="images/_img4_landing.svg" />
+          <img src="images/img4_landing.svg" />
         </div>
         <div class="landing-section__text-area--small">
           <div class="landing-section__text--large">
