feat: 랜딩 페이지 colored텍스트의 color이름 지정

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <main class="landing-section--main">
       <div class="landing-section__text--main">
         <p class="first-line">
-          <span class="colored-text-1">세상의 모든 정보</span>를
+          <span class="landing-section__paragraph--gradient-purple-red">세상의 모든 정보</span>를
         </p>
         <p class="second-line">쉽게 저장하고 관리해 보세요</p>
       </div>
@@ -93,7 +93,7 @@
       <div class="landing-section__contents--first">
         <div class="landing-section__text-area--large">
           <div class="landing-section__text--large">
-            <span class="colored-text-2">원하는 링크</span>를 저장하세요
+            <span class="landing-section__paragraph--gradient-red-blue">원하는 링크</span>를 저장하세요
           </div>
           <div class="landing-section__text--small">
             나중에 읽고 싶은 글, 다시 보고 싶은 영상,
@@ -119,7 +119,7 @@
         </div>
         <div class="landing-section__text-area--medium">
           <div class="landing-section__text--large">
-            링크를 폴더로 <span class="colored-text-3">관리</span>하세요
+            링크를 폴더로 <span class="landing-section__paragraph--gradient-yellow-blue">관리</span>하세요
           </div>
           <div class="landing-section__text--small">
             나만의 폴더를 무제한으로 만들고
@@ -138,7 +138,7 @@
       <div class="landing-section__contents">
         <div class="landing-section__text-area--large">
           <div class="landing-section__text--large">
-            저장한 링크를 <span class="colored-text-4">공유</span>해 보세요
+            저장한 링크를 <span class="landing-section__paragraph--gradient-blue-white">공유</span>해 보세요
           </div>
           <div class="landing-section__text--small">
             여러 링크를 폴더에 담고 공유할 수
@@ -168,7 +168,7 @@
         </div>
         <div class="landing-section__text-area--small">
           <div class="landing-section__text--large">
-            저장한 링크를 <span class="colored-text-5">검색</span>해 보세요
+            저장한 링크를 <span class="landing-section__paragraph--gradient-blue-red">검색</span>해 보세요
           </div>
           <div class="landing-section__text--small">
             중요한 정보들을 검색으로 쉽게
