Feat : 회원가입 페이지 아이디 input태그 이벤트 적용

--- a/signin.html
+++ b/signin.html
@@ -39,6 +39,6 @@
         </div>
 
     </div>
-    <script src="./static/script/index.js"></script>
+    <script src="./static/script/signin.js"></script>
 </body>
 </html>
