--- a/signup.html
+++ b/signup.html
@@ -14,13 +14,13 @@
                 <p>이미 회원이신가요? <a href="/signin.html" class="signinBtn">로그인 하기</a></p>
             </div>
             <div class="area2">
-                <label class="label">
+                <label class="label emailTag">
                     <p>이메일</p>
-                    <input type="text" name="id" placeholder="이메일 입력">
+                    <input class='id' type="text" name="id" placeholder="이메일 입력">
                 </label>
-                <label class="label">
+                <label class="label passwordTag">
                     <p>비밀번호</p>
-                    <input type="text" name="password" placeholder="비밀번호 입력">
+                    <input class='pw' type="text" name="password" placeholder="비밀번호 입력">
                     <img src="/static/img/eyes.svg" class="eyes" alt="비밀번호 보기">
                 </label>
                 <label class="label">
@@ -43,5 +43,6 @@
             </div>
         </div>
     </div>
+    <script src="./static/script/signup.js"></script>
 </body>
 </html>
