--- a/signin.html
+++ b/signin.html
@@ -6,11 +6,11 @@
     <title>signIn</title>
     <link rel="stylesheet" href="signin.style.css" />
     <link rel="stylesheet" href="global.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link
-      rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <main class="section">
@@ -30,7 +30,7 @@
             <input id="email" class="user-input" type="email" name="email" />
             <div id="email-errorText" class="errortext error"></div>
           </div>
-          <div class="input__section password__section">
+          <div id="password-section" class="input__section">
             <label class="text">비밀번호<br /></label>
             <input
               id="password"
@@ -43,7 +43,6 @@
           </div>
           <button id="btn" class="signin">로그인</button>
         </form>
-
         <div class="social">
           <div class="social-text">소셜 로그인</div>
           <div class="social-link">
@@ -57,6 +56,7 @@
         </div>
       </div>
     </main>
-    <script type="module" src="input.js"></script>
+    <script type="module" src="signin.js"></script>
+    <script typer="module" src="passwordToggle.js"></script>
   </body>
 </html>
