feat : signup.html에 passwordToggle.js 적용

--- a/signin.html
+++ b/signin.html
@@ -30,7 +30,7 @@
             <input id="email" class="user-input" type="email" name="email" />
             <div id="email-errorText" class="errortext error"></div>
           </div>
-          <div id="password-section" class="input__section">
+          <div class="input__section password-section">
             <label class="text">비밀번호<br /></label>
             <input
               id="password"
