--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,11 @@
     <title>signUp</title>
     <link rel="stylesheet" href="signup.style.css" />
     <link rel="stylesheet" href="global.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="section">
@@ -25,7 +30,7 @@
             <input id="email" class="user-input" type="email" name="email" />
             <div id="email-errorText" class="errortext error"></div>
           </div>
-          <div class="input__section">
+          <div class="input__section password-section">
             <label class="text">비밀번호</label>
             <input
               id="password"
@@ -33,9 +38,10 @@
               type="password"
               name="password"
             />
+            <i class="fa fa-eye fa-lg"></i>
             <div id="password-errorText" class="errortext error"></div>
           </div>
-          <div class="input__section">
+          <div class="input__section password-section">
             <label class="text">비밀번호 확인</label>
             <input
               id="password-confirm"
@@ -43,9 +49,10 @@
               type="password"
               name="verifyPassword"
             />
+            <i class="fa fa-eye fa-lg"></i>
+
             <div id="password-confirm-errorText" class="errortext error"></div>
           </div>
-
           <button type="submit" class="signup">회원가입</button>
         </form>
       </div>
@@ -63,5 +70,6 @@
       </div>
     </section>
     <script src="signup.js"></script>
+    <script typer="module" src="passwordToggle.js"></script>
   </body>
 </html>
