--- a/signup.html
+++ b/signup.html
@@ -16,16 +16,16 @@
             <div class="area2">
                 <label class="label emailTag">
                     <p>이메일</p>
-                    <input class='id' type="text" name="id" placeholder="이메일 입력">
+                    <input class="id" type="text" name="id" placeholder="이메일 입력">
                 </label>
                 <label class="label passwordTag">
                     <p>비밀번호</p>
-                    <input class='pw' type="text" name="password" placeholder="비밀번호 입력">
+                    <input class="password" type="text" name="password" placeholder="비밀번호 입력">
                     <img src="/static/img/eyes.svg" class="eyes" alt="비밀번호 보기">
                 </label>
-                <label class="label">
+                <label class="label verifyTag">
                     <p>비밀번호 확인</p>
-                    <input type="text" name="passwordCheck" placeholder="비밀번호 확인">
+                    <input class="verify-password" type="text" name="passwordCheck" placeholder="비밀번호 확인">
                     <img src="/static/img/eyes.svg" class="eyes" alt="비밀번호 보기">
                 </label>
             </div>
