모듈화 및 로그인 회원가입 기능 구현

--- a/signin.html
+++ b/signin.html
@@ -21,7 +21,7 @@
                 <label class="label passwordTag">
                     <p>비밀번호</p>
                     <input class='password' type="password" name="password" placeholder="비밀번호 입력">
-                    <img src="/static/img/noeyes.svg" alt="비밀번호 보기" class="eyes">
+                    <img src="/static/img/noeyes.svg" alt="비밀번호 보기" class="eyes password-eyes">
                 </label>
             </div>
             <button class="loginBtn">로그인</button>
@@ -39,6 +39,6 @@
         </div>
 
     </div>
-    <script src="./static/script/signin.js"></script>
+    <script type="module" src="./static/script/signin.js"></script>
 </body>
 </html>
