--- a/signup.html
+++ b/signup.html
@@ -20,13 +20,13 @@
                 </label>
                 <label class="label passwordTag">
                     <p>비밀번호</p>
-                    <input class="password" type="text" name="password" placeholder="비밀번호 입력">
-                    <img src="/static/img/eyes.svg" class="eyes" alt="비밀번호 보기">
+                    <input class="password" type="password" name="password" placeholder="비밀번호 입력">
+                    <img src="/static/img/noeyes.svg" class="eyes password-eyes" alt="비밀번호 보기">
                 </label>
                 <label class="label verifyTag">
                     <p>비밀번호 확인</p>
-                    <input class="verify-password" type="text" name="passwordCheck" placeholder="비밀번호 확인">
-                    <img src="/static/img/eyes.svg" class="eyes" alt="비밀번호 보기">
+                    <input class="verify-password" type="password" name="passwordCheck" placeholder="비밀번호 확인">
+                    <img src="/static/img/noeyes.svg" class="eyes verify-eyes" alt="비밀번호 보기">
                 </label>
             </div>
             <button class="signupBtn">회원가입</button>
@@ -43,6 +43,6 @@
             </div>
         </div>
     </div>
-    <script src="./static/script/signup.js"></script>
+    <script type="module" src="./static/script/signup.js"></script>
 </body>
 </html>
