refactor : 전의 signip.js 모듈화해서 적용

--- a/signin.html
+++ b/signin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signIn</title>
-    <link rel="stylesheet" href="signin.style.css" />
-    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="CSS/signin.style.css" />
+    <link rel="stylesheet" href="CSS/global.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
@@ -56,9 +56,9 @@
         </div>
       </div>
     </main>
-    <script type="module" src="email.js"></script>
-    <script type="module" src="password.js"></script>
-    <script type="module" src="signin.js"></script>
-    <script src="passwordToggle.js"></script>
+    <script type="module" src="JS/email.js"></script>
+    <script type="module" src="JS/password.js"></script>
+    <script type="module" src="JS/signin.js"></script>
+    <script src="JS/passwordToggle.js"></script>
   </body>
 </html>
