--- a/signup.html
+++ b/signup.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signUp</title>
-    <link rel="stylesheet" href="signup.style.css" />
-    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="CSS/signup.style.css" />
+    <link rel="stylesheet" href="CSS/global.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
@@ -69,7 +69,9 @@
         </div>
       </div>
     </section>
-    <script src="signup.js"></script>
-    <script src="passwordToggle.js"></script>
+    <script type="module" src="JS/email.js"></script>
+    <script type="module" src="JS/password.js"></script>
+    <script type="module" src="JS/signup.js"></script>
+    <script src="JS/passwordToggle.js"></script>
   </body>
 </html>
