--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,42 @@
             <a href="signin.html" class="primary">로그인 하기</a>
           </div>
         </div>
-        <form>
+        <form id="login-form">
+          <div class="email-box">
+            <label for="email">이메일</label>
+            <div class="email">
+              <input
+                id="email"
+                name="email"
+                type="email"
+                placeholder="codeit@codeit.com"
+              />
+              <span id="email-error" class="email-err"></span>
+            </div>
+          </div>
+          <div class="password-box">
+            <label for="password">비밀번호</label>
+            <div class="password">
+              <input id="password" name="password" type="password" />
+              <i class="fa-solid fa-eye fa-2x" id="togglePassword"></i>
+              <span id="password-error" class="password-err"></span>
+            </div>
+            <label for="password-confirm">비밀번호 확인</label>
+            <div class="password">
+              <input
+                id="password-confirm"
+                name="password-confirm"
+                type="password"
+              />
+              <i class="fa-solid fa-eye fa-2x" id="togglePasswordConfirm"></i>
+              <span id="pwd-confirm-error" class="password-err"></span>
+            </div>
+          </div>
+          <button id="signin-button" class="signin-but white" type="submit">
+            회원가입
+          </button>
+        </form>
+        <!-- <form>
           <label for="email">이메일</label>
           <input
             id="email"
@@ -39,7 +74,7 @@
             <i class="fa-solid fa-eye fa-2x togglePassword"></i>
           </div>
           <button class="signin-but white" type="submit">회원가입</button>
-        </form>
+        </form> -->
         <div class="social-login gray-4">
           <span>다른 방식으로 가입하기</span>
           <div class="social-images">
@@ -53,30 +88,6 @@
         </div>
       </div>
     </div>
-    <script>
-      const togglePasswords = document.querySelectorAll(".togglePassword");
-      const passwordInputs = document.querySelectorAll(
-        'input[type="password"]'
-      );
-
-      togglePasswords.forEach(function (togglePassword, index) {
-        togglePassword.addEventListener("click", function () {
-          const type =
-            passwordInputs[index].getAttribute("type") === "password"
-              ? "text"
-              : "password";
-          passwordInputs[index].setAttribute("type", type);
-
-          // 아이콘 클래스 토글
-          if (type === "text") {
-            togglePassword.classList.remove("fa-eye");
-            togglePassword.classList.add("fa-eye-slash");
-          } else {
-            togglePassword.classList.remove("fa-eye-slash");
-            togglePassword.classList.add("fa-eye");
-          }
-        });
-      });
-    </script>
+    <script type="module" src="signup.js"></script>
   </body>
 </html>
