feat: 5주차 위클리 미션

--- a/signin.html
+++ b/signin.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인</title>
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
     <link
       rel="stylesheet"
       type="text/css"
@@ -21,20 +24,20 @@
       </p>
     </header>
     <div class="sign-box">
-      <form class="sign-form">
+      <form id="form" class="sign-form">
         <div class="sign-inputs">
           <div class="sign-input-box">
-            <label for="email" class="sign-input-label">이메일</label>
-            <input id="email" name="email" class="sign-input" />
-            <div class="email-error"></div>
+            <label class="sign-input-label">이메일</label>
+            <input id="email" class="sign-input" />
+            <p id="email-error-message" class="error-message"></p>
           </div>
           <div class="sign-input-box sign-password">
-            <label for="password" class="sign-input-label">비밀번호</label>
-            <input class="sign-input" name="password" type="password" />
-            <button class="eye-button" type="button">
+            <label class="sign-input-label">비밀번호</label>
+            <input id="password" class="sign-input" type="password" />
+            <p id="password-error-message" class="error-message"></p>
+            <button id="password-toggle" class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
-            <div class="password-error"></div>
           </div>
         </div>
         <button class="cta" type="submit">로그인</button>
@@ -51,6 +54,6 @@
         </div>
       </div>
     </div>
-    <script src="src/signin.js"></script>
+    <script type="module" src="./src/signin.js"></script>
   </body>
 </html>
