--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Linkbrary</title>
     <meta property="og:title" content="Linkbrary" key="title" />
     <meta
@@ -16,11 +15,6 @@
       content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
       key="image"
     />
-    <meta
-      property="og:url"
-      content="https://linkbrary-week4-doyeon.netlify.app/"
-      key="url"
-    />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@linkbrary" />
     <meta name="twitter:title" content="Linkbrary" />
@@ -28,6 +22,10 @@
     <meta
       name="twitter:image"
       content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no"
     />
     <link
       rel="stylesheet"
@@ -40,7 +38,7 @@
     <nav>
       <div class="gnb">
         <a href="index.html">
-          <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+          <img class="logo" src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
         </a>
         <a class="cta cta-short" href="signin.html">
           <span>로그인</span>
@@ -63,15 +61,13 @@
     <article>
       <section>
         <h2 class="title">
-          <span class="title-1-gradient background-clip-text"> 원하는 링크</span>를
-          <br />
-          저장하세요
+          <span class="title-1-gradient background-clip-text"> 원하는 링크</span>를 저장하세요
         </h2>
         <p class="description">
           나중에 읽고 싶은 글, 다시 보고 싶은 영상,
-          <br />
+          <br class="line-break-tablet-desktop" />
           사고 싶은 옷, 기억하고 싶은 모든 것을
-          <br />
+          <br class="line-break-tablet-desktop" />
           한 공간에 저장하세요.
         </p>
         <img src="./images/image1.png" class="content-image" alt="링크의 내용이 담긴 카드들" />
@@ -79,12 +75,11 @@
       <section>
         <h2 class="title">
           링크를 폴더로
-          <br />
           <span class="title-2-gradient background-clip-text">관리</span>하세요
         </h2>
         <p class="description">
           나만의 폴더를 무제한으로 만들고
-          <br />
+          <br class="line-break-tablet-desktop" />
           다양하게 활용할 수 있습니다.
         </p>
         <img src="./images/image2.png" class="content-image" alt="폴더 이름 변경 기능" />
@@ -92,14 +87,10 @@
       <section>
         <h2 class="title">
           저장한 링크를
-          <br />
           <span class="title-3-gradient background-clip-text">공유</span>해 보세요
         </h2>
         <p class="description">
-          여러 링크를 폴더에 담고 공유할 수 있습니다.
-          <br />
-          가족, 친구, 동료들에게 쉽고 빠르게 링크를
-          <br />
+          여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를
           공유해 보세요.
         </p>
         <img src="./images/image3.png" class="content-image" alt="폴더 공유 기능" />
@@ -107,7 +98,6 @@
       <section>
         <h2 class="title">
           저장한 링크를
-          <br />
           <span class="title-4-gradient background-clip-text">검색</span>해 보세요
         </h2>
         <p class="description">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
