refactor: Move css dir to assets and fix README.md

--- a/Linkbrary/src/index.html
+++ b/Linkbrary/src/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
     <meta name="twitter:image" content="https://t1.daumcdn.net/cfile/tistory/9959FF4D5E61E0A22E">
     <title>Linkbrary</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="/src/assets/css/reset.css">
     <link rel="stylesheet" href="scss/pages/_home.scss">
 </head>
 
