refactor: Move img dir to assets

--- a/Linkbrary/src/privacy.html
+++ b/Linkbrary/src/privacy.html
@@ -12,7 +12,7 @@
     <header>
         <h1>
             <a href="">
-                <img src="img/logo.svg" alt="Linkbrary" class="sign-logo">
+                <img src="/src/assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
             </a>
             Linkbrary
         </h1>
@@ -40,22 +40,22 @@
                 <ul>
                     <li>
                         <a href="https://www.facebook.com/" target="_blank" rel='noreferrer noopener'>
-                            <img src="img/akar-icons_facebook-fill.svg" alt="Facebook link logo">
+                            <img src="/src/assets/img/akar-icons_facebook-fill.svg" alt="Facebook link logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://twitter.com/?lang=ko" target="_blank" rel='noreferrer noopener'>
-                            <img src="img/akar-icons_twitter-fill.svg" alt="Twitter link logo">
+                            <img src="/src/assets/img/akar-icons_twitter-fill.svg" alt="Twitter link logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.youtube.com/" target="_blank" rel='noreferrer noopener'>
-                            <img src="img/akar-icons_youtube-fill.svg" alt="Youtube link logo">
+                            <img src="/src/assets/img/akar-icons_youtube-fill.svg" alt="Youtube link logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/" target="_blank" rel='noreferrer noopener'>
-                            <img src="img/ant-design_instagram-filled.svg" alt="Instagram link logo">
+                            <img src="/src/assets/img/ant-design_instagram-filled.svg" alt="Instagram link logo">
                         </a>
                     </li>
                 </ul>
