--- a/Linkbrary/src/signup.html
+++ b/Linkbrary/src/signup.html
@@ -15,7 +15,7 @@
             <div class="sign-top">
                 <h1>
                     <a href="index.html">
-                        <img src="img/logo.svg" alt="Linkbrary" class="sign-logo">
+                        <img src="/src/assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
                     </a>
                     <span class="blind">Linkbrary</span>
                 </h1>
@@ -34,8 +34,8 @@
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input text-input">
                         <button type="button" class="pw-toggle-btn">
-                            <img src="img/eye-on.svg" alt="Show Password" class="hidden">
-                            <img src="img/eye-off.svg" alt="Hide Password">
+                            <img src="/src/assets/img/eye-on.svg" alt="Show Password" class="hidden">
+                            <img src="/src/assets/img/eye-off.svg" alt="Hide Password">
                         </button>
                     </div>
                 </div>
@@ -45,8 +45,8 @@
                         <input type="password" id="password-check" name="password-check" required
                             class="sign-input text-input">
                         <button type="button" class="pw-toggle-btn">
-                            <img src="img/eye-on.svg" alt="Show Password" class="hidden">
-                            <img src="img/eye-off.svg" alt="Hide Password">
+                            <img src="/src/assets/img/eye-on.svg" alt="Show Password" class="hidden">
+                            <img src="/src/assets/img/eye-off.svg" alt="Hide Password">
                         </button>
                     </div>
                 </div>
@@ -57,10 +57,10 @@
                     다른 방식으로 가입하기
                     <div class="social-links">
                         <a href="https://www.google.com/" target="_blank" rel='noreferrer noopener'>
-                            <img src="img/google.svg" alt="Google Sign In Link">
+                            <img src="/src/assets/img/google.svg" alt="Google Sign In Link">
                         </a>
                         <a href="https://www.kakaocorp.com/page/" target="_blank" rel='noreferrer noopener'>
-                            <img src="img/kakao.svg" alt="Kakao Sign In Link" class="img-border">
+                            <img src="/src/assets/img/kakao.svg" alt="Kakao Sign In Link" class="img-border">
                         </a>
                     </div>
                 </div>
