refactor: Move scss dir to assets

--- a/Linkbrary/src/index.html
+++ b/Linkbrary/src/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:image" content="https://t1.daumcdn.net/cfile/tistory/9959FF4D5E61E0A22E">
     <title>Linkbrary</title>
     <link rel="stylesheet" href="/src/assets/css/reset.css">
-    <link rel="stylesheet" href="scss/pages/_home.scss">
+    <link rel="stylesheet" href="/src/assets/scss/pages/_home.scss">
 </head>
 
 <body>
