--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linkbrary</title>
     <link rel="stylesheet" href="/src/assets/css/reset.css">
-    <link rel="stylesheet" href="scss/pages/_auth-page.scss">
+    <link rel="stylesheet" href="/src/assets/scss/pages/_auth-page.scss">
 </head>
 
 <body>
