refactor: Move signin.html to pages/signin/ and rename to index.html

--- a/Linkbrary/src/faq.html
+++ b/Linkbrary/src/faq.html
@@ -16,7 +16,7 @@
             </a>
             Linkbrary
         </h1>
-        <a href="signin.html" class="btn header-login">로그인</a>
+        <a href="/src/pages/signin/index.html" class="btn header-login">로그인</a>
     </header>
     <main>
         <h2>FAQ</h2>
