--- a/Linkbrary/src/pages/signin/index.html
+++ b/Linkbrary/src/pages/signin/index.html
@@ -14,14 +14,14 @@
         <div class="sign">
             <div class="sign-top">
                 <h1>
-                    <a href="index.html">
+                    <a href="/src/index.html">
                         <img src="/src/assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
                     </a>
                     <span class="blind">Linkbrary</span>
                 </h1>
                 <div class="join">
                     <span>회원이 아니신가요?</span>
-                    <a href="signup.html" class="sign-link">회원 가입하기</a>
+                    <a href="../../signup.html" class="sign-link">회원 가입하기</a>
                 </div>
             </div>
             <form action="signin.html" method="post" class="sign-form" id="sign-in-form">
@@ -56,7 +56,7 @@
             </div>
         </div>
     </main>
-    <script type="module" src="js/signIn.js"></script>
+    <script type="module" src="signIn.js"></script>
 </body>
 
 </html>
