--- a/Linkbrary/src/signup.html
+++ b/Linkbrary/src/signup.html
@@ -21,7 +21,7 @@
                 </h1>
                 <div class="join">
                     <span>이미 회원이신가요?</span>
-                    <a href="signin.html" class="sign-link">로그인 하기</a>
+                    <a href="/src/pages/signin/index.html" class="sign-link">로그인 하기</a>
                 </div>
             </div>
             <form action="signup.html" method="post" class="sign-form" id="sign-up-form">
