refactor: Move signup.html to pages/signup and rename to index.html

--- a/Linkbrary/src/index.html
+++ b/Linkbrary/src/index.html
@@ -37,7 +37,7 @@
                 </span>
                 관리해 보세요
             </h2>
-            <a href="signup.html" class="btn link-add">링크 추가하기</a>
+            <a href="/src/pages/signup/index.html" class="btn link-add">링크 추가하기</a>
             <div class="page-sample">
                 <img src="/src/assets/img/_dim.png" alt="" class="page-sample-dim-effect">
                 <div class="page-sample-content">
