--- a/Linkbrary/src/pages/signup/index.html
+++ b/Linkbrary/src/pages/signup/index.html
@@ -24,7 +24,7 @@
                     <a href="/src/pages/signin/index.html" class="sign-link">로그인 하기</a>
                 </div>
             </div>
-            <form action="signup.html" method="post" class="sign-form" id="sign-up-form">
+            <form action="" method="post" class="sign-form" id="sign-up-form">
                 <div class="input-box">
                     <label for="user-email">이메일</label>
                     <input type="email" id="user-email" name="user-email" required class="sign-input text-input">
@@ -67,7 +67,7 @@
             </div>
         </div>
     </main>
-    <script type="module" src="js/signUp.js"></script>
+    <script type="module" src="signUp.js"></script>
 </body>
 
 </html>
