--- a/Linkbrary/src/pages/signin/index.html
+++ b/Linkbrary/src/pages/signin/index.html
@@ -21,10 +21,10 @@
                 </h1>
                 <div class="join">
                     <span>회원이 아니신가요?</span>
-                    <a href="../../signup.html" class="sign-link">회원 가입하기</a>
+                    <a href="/src/pages/signup/index.html" class="sign-link">회원 가입하기</a>
                 </div>
             </div>
-            <form action="signin.html" method="post" class="sign-form" id="sign-in-form">
+            <form action="" method="post" class="sign-form" id="sign-in-form">
                 <div class="input-box">
                     <label for="user-email">이메일</label>
                     <input type="email" id="user-email" name="user-email" required class="sign-input text-input">
