feat: Add api request features in signin page

--- a/Linkbrary/src/folder.html
+++ b/Linkbrary/src/folder.html
@@ -5,11 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/src/assets/scss/pages/_home.scss">
     <link rel="stylesheet" href="/src/assets/scss/just-for-fun/blackJack.scss">
 </head>
 
 <body>
     <main>
+        <header>
+            <h1>
+                <a href="index.html">
+                    <img src="/src/assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
+                </a>
+                Linkbrary
+            </h1>
+            <a href="/src/pages/signin/index.html" class="btn header-login">로그인</a>
+        </header>
+
         <h1>LOOKING FOR FOLDER PAGE?</h1>
         <h2 style="text-align: center;">그런건 없습니다<br>대신 블랙잭 한판 어떠신가요?</h2>
         <ul class="rules">
