--- a/Linkbrary/src/pages/faq/index.html
+++ b/Linkbrary/src/pages/faq/index.html
@@ -27,10 +27,10 @@
                 ©codeit - 2023
             </div>
             <div class="policy-bar">
-                <a href="privacy.html">
+                <a href="/src/pages/privacy/index.html">
                     Privacy Policy
                 </a>
-                <a href="faq.html">
+                <a href="/src/pages/faq/index.html">
                     FAQ
                 </a>
             </div>
