build 아 진짜 짜증난다

--- a/Linkbrary/src/folder.html
+++ b/Linkbrary/src/folder.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/scss/pages/_home.scss">
-    <link rel="stylesheet" href="./assets/scss/just-for-fun/blackJack.scss">
+    <title>Documenthttpstitle>
+        <link rel="stylesheet" href="assets/scss/pages/_home.scss">
+        <link rel="stylesheet" href="assets/scss/just-for-fun/blackJack.scss">
 </head>
 
 <body>
     <main>
         <header>
             <h1>
-                <a href="./index.html">
-                    <img src="./assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
+                <a href="index.html">
+                    <img src="assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
                 </a>
                 Linkbrary
             </h1>
-            <a href="./pages/signin/index.html" class="btn header-login">로그인</a>
+            <a href="pages/signin/index.html" class="btn header-login">로그인</a>
         </header>
 
         <h1>LOOKING FOR FOLDER PAGE?</h1>
@@ -100,7 +100,7 @@
         </div>
 
     </main>
-    <script src="./js/justForFun/blackJack.js">
+    <script src="js/justForFun/blackJack.js">
     </script>
 </body>
 
