fix: handleLogin 함수 동기 실행오류 수정

--- a/Linkbrary/src/folder.html
+++ b/Linkbrary/src/folder.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documenthttpstitle>
-        <link rel="stylesheet" href="assets/scss/pages/_home.scss">
-        <link rel="stylesheet" href="assets/scss/just-for-fun/blackJack.scss">
+    <title>Document</title>
+    <link rel="stylesheet" href="assets/scss/just-for-fun/blackJack.scss">
+    <link rel="stylesheet" href="assets/scss/pages/_home.scss">
 </head>
 
 <body>
