feat: Add signupAPi features

--- a/Linkbrary/src/pages/signup/index.html
+++ b/Linkbrary/src/pages/signup/index.html
@@ -14,7 +14,7 @@
         <div class="sign">
             <div class="sign-top">
                 <h1>
-                    <a href="index.html">
+                    <a href="../../index.html">
                         <img src="../../assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
                     </a>
                     <span class="blind">Linkbrary</span>
