error표시 추가, 제거 함수 생성 및 signup.js에 import

--- a/signin.html
+++ b/signin.html
@@ -63,5 +63,5 @@
       </div>
     </div>
   </div>
-  <script src="signin.js"></script>
+  <script type="module" src="signin.js"></script>
 </body>
