--- a/signup.html
+++ b/signup.html
@@ -73,5 +73,5 @@
       </div>
     </div>
   </div>
-  <script src="signup.js"></script>
+  <script type="module" src="signup.js"></script>
 </body>
