사용안하는 속성 삭제

--- a/signup.html
+++ b/signup.html
@@ -19,8 +19,8 @@
         </a>
       </h1>
       <h2>
-        회원이 아니신가요?
-        <a href="./signup.html">회원가입하기</a>
+        이미 회원이신가요?
+        <a href="./signup.html">로그인하기</a>
       </h2>
     </div>
     <div class="input-form">
