chore: fix some styles related to folder page

--- a/Linkbrary/src/folder.html
+++ b/Linkbrary/src/folder.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/scss/layouts/_header.scss">
     <link rel="stylesheet" href="assets/scss/pages/_home.scss">
     <link rel="stylesheet" href="assets/scss/just-for-fun/blackJack.scss">
 </head>
 
 <body>
     <main>
-        <header>
+        <header class="main-header">
             <h1>
                 <a href="index.html">
                     <img src="assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
                 </a>
-                Linkbrary
+                <p class="blind">Linkbrary</p>
             </h1>
             <a href="pages/signin/index.html" class="btn header-login">로그인</a>
         </header>
